# ai_jewel

./: Cargo.toml  data_center.json
src/: lib.rs
src/artifacts/: ai.rs  ai_gen.rs  attachments.rs  data_center.rs  database.rs  desire_variables.rs  game.rs  mod.rs  tasks_workstation.rs
src/artifacts/operations/: mod.rs  task_operators.rs  tasks.rs
src/artifacts/smart_contracts/: lib2.rs  mod.rs
