[package]
name = "jewel_smartcontracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
smart-contract = "0.2.0"
smart-contract-macros = "0.2.0"